--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h3>What is the captial of India?</h3>
+	
+	<input id="check1" type="radio" name="city"  />
+	<label for="check1" >New delhi</label><br>
+	<input id="check2" type="radio" name="city"   />
+	<label for="check"2>Mumbai</label>
+	<blockquote id="quotation">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
